haz el rewards cabezon

--- a/src/traffic_light.ipynb
+++ b/src/traffic_light.ipynb
@@ -2459,34 +2459,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* * * * * \u001b[34m-\u001b[0m \n",
       "* * * * * \u001b[34mU\u001b[0m \n",
       "* * * * * \u001b[34mU\u001b[0m \n",
-      "* * * * * \u001b[34m-\u001b[0m \n",
-      "* * * * * \u001b[34m-\u001b[0m \n",
-      "\u001b[34mL\u001b[0m \u001b[34mL\u001b[0m \u001b[34mL\u001b[0m \u001b[34mL\u001b[0m \u001b[34mL\u001b[0m \u001b[31mR\u001b[0m \n"
+      "* * * * * \u001b[34mU\u001b[0m \n",
+      "* * * * * \u001b[34mU\u001b[0m \n",
+      "* * * * * \u001b[34mU\u001b[0m \n",
+      "\u001b[34m-\u001b[0m \u001b[34mL\u001b[0m \u001b[34mL\u001b[0m \u001b[34mL\u001b[0m \u001b[34m-\u001b[0m \u001b[32mG\u001b[0m \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "100"
+       "500"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SimulatePolicy(env,policy, 100)"
+    "SimulatePolicy(env,policy, 500)"
    ]
   },
   {
@@ -2536,6 +2536,7 @@
     "    for i in range(200):\n",
     "\n",
     "        s = grid.state  # observes\n",
+    "        #TODO AQUI CABEZA\n",
     "        g = grid.count_zeros(list(s[:-1]))\n",
     "        if g >= grid.goal:\n",
     "            break\n",
@@ -2782,6 +2783,7 @@
     "\n",
     "    for i in range(maxSteps):\n",
     "        s = grid.state\n",
+    "        #TODO AQUI CABEZA\n",
     "        g = grid.count_zeros(list(s[:-1]))\n",
     "        if g >= grid.goal:\n",
     "            grid.reset()\n",
